--- a/classManager/templates/addStudent.html
+++ b/classManager/templates/addStudent.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>addStudent</title>
+    <title>添加学生</title>
 </head>
 <body>
 <h1>添加学生</h1>
