--- a/classManager/templates/addclass.html
+++ b/classManager/templates/addclass.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>add_class</title>
+    <title>添加班级</title>
     <script src="/static/jquery-3.4.1.min.js"></script>
 </head>
 <body>
