--- a/classManager/templates/students.html
+++ b/classManager/templates/students.html
@@ -3,33 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>学生列表</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.staticfile.org/jquery/3.4.1/jquery.min.js"></script>
 
-    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
 </head>
-<body style="margin: 30px">
+<body>
+
+
 <ul class="nav nav-tabs">
-  <li role="presentation" ><a href="/class/">班级列表</a></li>
-  <li role="presentation" class="active"><a href="/students/">学生列表</a></li>
-  <li role="presentation"><a href="/tearchers/">老师列表</a></li>
+    <li role="presentation" ><a href="/class/">班级列表</a></li>
+    <li role="presentation" class="active"><a href="/students/">学生列表</a></li>
+    <li role="presentation"><a href="/tearchers/">老师列表</a></li>
 </ul>
 
 
-<div class="panel panel-success">
-    <!-- Default panel contents -->
-    <div class="panel-heading">学生列表
+<div>
+    <h1>学生列表</h1>
+    <div>
         <a href="/addStudent/" class="btn btn-primary">添加学生</a>
-        <button id="addModelStudent" class="btn btn-primary">模态框添加学生</button>
     </div>
     <!-- Table -->
-    <table class="table">
+    <table>
         <thead>
         <tr>
             <td>ID</td>
@@ -46,9 +38,7 @@
                 <td clsid = "{{ row.cid }}">{{ row.name }}</td>
                 <td>
                     <a href="/editStudent/?id={{ row.id }}" class="btn btn-info">编辑</a>
-                    <a class="btn btn-info btn-edit">模态框编辑</a>
                     <a href="/delete_student/?id={{ row.id }}" class="btn btn-danger">删除</a>
-                    <a class="btn btn-danger btn-delete">模态框删除</a>
                 </td>
             </tr>
 
@@ -57,189 +47,5 @@
         </tbody>
     </table>
 </div>
-
-{#模态框样式#}
-<style>
-    .shadow {
-        /*固定在浏览器的某个地方相对于窗口来说*/
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        background-color: black;
-        opacity: 0.4;
-        z-index: 999;
-    }
-
-    .add-model {
-        position: fixed;
-        left: 50%;
-        top: 50%;
-        width: 400px;
-        height: 300px;
-        margin-left: -200px;
-        margin-top: -200px;
-        background-color: white;
-        z-index: 1000;
-    }
-
-    .hide {
-        display: none;
-    }
-</style>
-<div id="shadow" class="shadow hide"></div>
-{#添加#}
-<div id='addModel' class="add-model hide">
-    <h3>添加学生</h3>
-    <p>
-        姓名：<input id="addName" type="text" name="name" placeholder="姓名">
-
-    </p>
-    <p>
-        班级：
-        <select id="addClassId" name="classId">
-            {% for class in class_list %}
-                <option value="{{ class.id }}">{{ class.name }}</option>
-            {% endfor %}
-        </select>
-    </p>
-    <input id="btnAdd" type="button" class="btn btn-success" value="添加">
-    <input id="addCancel" type="button" class="btn btn-success" value="取消">
-    <span id="addError" style="color: red"></span>
-</div>
-{#编辑#}
-<div id='editModel' class="add-model hide">
-    <h3>编辑学生</h3>
-    <p>
-        姓名：<input id="editName" type="text" name="name" placeholder="姓名">
-        <input style="display: none" type="text" id="editId" >
-    </p>
-    <p>
-        班级：
-        <select id="editClassId" name="classId">
-            {% for class in class_list %}
-
-                <option value="{{ class.id }}">{{ class.name }}</option>
-            {% endfor %}
-        </select>
-    </p>
-    <input id="btnEdit" type="button" class="btn btn-info" value="提交">
-    <input id="editCancel" type="button" class="btn btn-success" value="取消">
-    <span id="editError" style="color: red"></span>
-</div>
-{#删除#}
-<div id="deleteModel" class="add-model hide">
-    <h3>删除学生：</h3>
-    <p id="deleteId" style="display: none;"></p>
-    <p id="deleteName"></p>
-    <button id="deleteBtn" class="btn btn-danger">确定</button>
-    <button id="deleteCancle" class="btn">确定</button>
-</div>
-
-
-<script src="/static/jquery-3.4.1.min.js"></script>
-
-<script>
-    //当页面框架加载完成后执行
-    $(function () {
-        //jquery 对话框添加学生绑定事件
-        //显示模态框
-        $("#addModelStudent").click(function () {
-            //如果a标签有href，阻止href跳转的事件发生返回 return false
-            $('#shadow,#addModel').removeClass('hide')
-        });
-        //隐藏
-        $('#addCancel,#editCancel,#deleteCancle').click(function () {
-            $('#shadow,#addModel').addClass('hide')
-            $('#shadow,#editModel').addClass('hide')
-            $('#shadow,#deleteModel').addClass('hide')
-        })
-
-        //添加
-        $("#btnAdd").click(function () {
-            if ($('#addName').val().length > 0) {
-                $.ajax({
-                    url: '/model_add_student/',
-                    type: 'POST',
-                    data: {'sname': $('#addName').val(), 'cid': $('#addClassId').val()},
-                    success: function (data) {
-                        data = JSON.parse(data);
-                        if (data.status) {
-                            location.reload()
-                        } else {
-                            $('#addError').text(data.msg)
-                        }
-                    }
-                })
-            }else
-            {
-                $('#addError').text('学生姓名不能为空')
-            }
-
-        })
-
-        //编辑显示模态框
-        $(".btn-edit").click(function () {
-            $('#shadow,#editModel').removeClass('hide');
-            /*
-            * 1.找到当前标签$(this)，和父标签，再往上找
-            * */
-            var tds = $(this).parent().prevAll();
-            var sid = $(tds[2]).text();
-            var sname = $(tds[1]).text();
-            var cid = $(tds[0]).attr('clsid');
-            console.log(sid,sname,cid);
-            $('#deleteid').val(sid);
-            $('#editName').val(sname);
-            $('#editClassId').val(cid);
-        })
-        //编辑提交
-        $("#btnEdit").click(function () {
-            $.ajax({
-                url:'/model_edit_student/',
-                type: 'POST',
-                data:{'sid':$('#editId').val(),'sname':$('#editName').val(),'cid':$('#editClassId').val()},
-                dataType:"JSON", //这里写上就会自动转化成对象
-                success:function (data) {
-                    {#data = JSON.parse(data)#}
-                    if (data.status){
-                        location.reload()
-                    } else{
-                        $("#editError").text(data.msg)
-                    }
-                }
-            })
-        })
-        
-        //删除
-        $(".btn-delete").click(function () {
-            $("#deleteModel,#shadow").removeClass('hide')
-
-            var tds = $(this).parent().prevAll();
-            var sid = $(tds[2]).text();
-            var sname = $(tds[1]).text();
-            var cname = $(tds[0]).text();
-            $('#deleteId').text(sid);
-            $('#deleteName').text( cname + sname );
-
-        })
-
-        //删除按钮点击事件
-        $("#deleteBtn").click(function () {
-            $.ajax({
-                url:"/model_delete_student/",
-                type:"POST",
-                data:{"sid":$("#deleteId").text()},
-                success:function (data) {
-                    console.log(data)
-                    location.reload()
-                }
-            })
-        })
-    })
-
-</script>
-
 </body>
 </html>
